(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|

(library
 (public_name interpreter)
 (name interpreter)
 |} ^ preprocess ^ {|)

(ocamllex lexer)
(menhir (modules parser))

|}